--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@riverbraid/memory-gold",
-  "version": "1.0.0",
-  "type": "module",
-  "main": "index.js"
+  "version": "1.1.0",
+  "type": "module"
 }
