--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "@riverbraid/memory-gold",
-  "version": "1.1.0",
-  "type": "module"
+  "name": "@riverbraid/riverbraid-memory-gold",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
+  "main": "index.js",
+  "scripts": { "test": "node index.js" }
 }
